update port